Fix logo in home page being cut off in mobile #29

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,4 +1,5 @@
 @import 'colors'; 
+@import 'media-breakpoints';
 
 @font-face {
     font-family: 'Fira Sans Book';
@@ -102,7 +103,6 @@
 .phase-marker {
   width: 15%;
   display: inline-block;
-  float: left;
 
   @media(max-width: 681px) {
     display: none;
@@ -228,12 +228,21 @@ header {
     position: relative;
     top: 50px;
     right: 115px;
+    display: none;
+
+    @media (min-width: $screen-sm) {
+      display: block;
+    }
   }
 
   .logo-text-lg {
     position: relative;
     padding: 0 15px 0 15px;
-    bottom: 50px;
+    bottom: 0;
+
+    @media (min-width: $screen-sm) {
+      bottom: 50px;
+    }
   }
 
   .logo-text > h1 {
